--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Chunzime</title>
+    <title>Chunzime :: 천재지변알리미</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/home.css" %}"/>
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans" rel="stylesheet">
