--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	    <title>Welcome!</title>
+	    <title>Chunzime :: 천재지변알리미</title>
 	    <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"/>
 	</head>
 	<body>
