add body filter:vlur

--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -9,6 +9,7 @@ body{
     margin: 0;
     background-image: url("../img/background_img.jpg");
     background-size: cover;
+    transition: all .5s linear;
 }
 
 .user .chat {
