--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -94,7 +94,7 @@
 			$("#sample").slideToggle();
 			$("#blurbox").css("visibility", "visible");
 			$("#blurbox").css("opacity", "1");
-			$("body:not('#sample, .plusbtn')").css("filter", "blur(6px)");
+			$("body.not('#sample, .plusbtn')").css("filter", "blur(6px)");
 		});
 
 		// 우측 하단 + 버튼 메뉴 닫기
