fixed grammer error

--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -28,7 +28,7 @@
 			<a href="/home"><img src="{% static "img/title.png" %}"/></a>
 		</nav>
 		<div class = "description">
-			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/>아래에 있는 검색창에 얻고 싶은 정보를 입력해보세요!<br/>(EX. Tell me how to deal with earthquake)
+			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/>아래에 있는 검색창에 얻고 싶은 정보를 입력해보세요!<br/>(EX. Tell me how to deal with earthquake)<br/>추가 예시 질의는 우측 하단의 + 버튼을 클릭하세요.
 		</div>
 		<div class = "wrapper">
 			<div class = "box">
@@ -58,7 +58,7 @@
 			<li>Sample questions</li>
 			<li>Tell me how to deal with earthquake.</li>
 			<li>What is the difference between magnitude and intensity of an earthquake.</li>
-			<li>I want to know what kind of disasters is in Korea.</li>
+			<li>I want to know what kind of disasters there are in Korea.</li>
 			<li>Would you tell me how to measure disasters occur in Korea?</li>
 			<li>How can we implement restoration after disaster?</li>
 		</ul>
