--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -8,8 +8,7 @@
 	<body>
 		<div class = "container">
 			<nav class = "navbar">
-				<img src="{% static "img/logo.png" %}"/>
-				<img src="{% static "img/title.png" %}"/>
+				<img src="{% static "img/idx_title.png" %}"/>
 			</nav>
 			<br><br><br>
 			<a class="butn" href="/home">Enter</a>
