--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -215,6 +215,7 @@
 		// 대화방 입장시 첫 질문 자동 출력
 		$("#question").val("Hello Watson, can I ask some question to you?");
 		tongsin();
+		$("body").scrollTop(0);
 	</script>
 </body>
 
